tests/compile_fail/cyclic_dependency.stderr
error: found cyclic dependency. (x -> y -> x)
 --> $DIR/cyclic_dependency.rs:2:10
  |
2 | #[derive(Arbitrary, Debug)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Arbitrary` (in Nightly builds, run with -Z macro-backtrace for more info)
